--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -525,7 +525,7 @@
     </TableLayout>
 
     <Button
-            android:text="Button"
+            android:text=" View Favorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button"
